# secure-multipath-transmission

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: network_analysis.py  quickstart.py
src/smt/: __init__.py  graph.py  models.py  optimizer.py  probability.py  shamir.py  simulation.py
src/smt/phases/: __init__.py  base.py  phase1.py  phase2.py  phase3.py
tests/: conftest.py  test_graph.py  test_models.py  test_optimizer.py  test_phase1.py  test_phase2.py  test_probability.py  test_shamir.py  test_simulation.py
